// Vitest Snapshot v1

exports[`TabBar > TabBar badgePropsVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed t-tab-bar--safe t-tab-bar--normal"
  role="tablist"
>
  
  
  <div
    aria-label="首页，有16条消息"
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="true"
      class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--normal"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            
            
            <svg
              class="t-icon t-icon-home"
              style="font-size: 20px;"
            >
              <use
                href="#t-icon-home"
              />
            </svg>
            
            
          </div>
          <div
            class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
            style="right: 0px; top: 0px;"
          >
            <!---->
            16
            <!---->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        
        首页 
        
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    aria-label="软件，有新的消息"
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--normal"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            
            
            <svg
              class="t-icon t-icon-app"
              style="font-size: 20px;"
            >
              <use
                href="#t-icon-app"
              />
            </svg>
            
            
          </div>
          <div
            class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
            style="right: 0px; top: 0px;"
          >
            <!---->
            
            <!---->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        
        软件 
        
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    aria-label="聊天，New"
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--normal"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            
            
            <svg
              class="t-icon t-icon-chat"
              style="font-size: 20px;"
            >
              <use
                href="#t-icon-chat"
              />
            </svg>
            
            
          </div>
          <div
            class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
            style="right: 0px; top: 0px;"
          >
            <!---->
            New
            <!---->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        
        聊天 
        
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    aria-label="我的，有很多消息"
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--normal"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            
            
            <svg
              class="t-icon t-icon-user"
              style="font-size: 20px;"
            >
              <use
                href="#t-icon-user"
              />
            </svg>
            
            
          </div>
          <div
            class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
            style="right: 0px; top: 0px;"
          >
            <!---->
            ···
            <!---->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        
        我的 
        
      </div>
    </div>
    <!--v-if-->
  </div>
  
  
</div>
`;

exports[`TabBar > TabBar baseVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed t-tab-bar--safe t-tab-bar--normal"
  role="tablist"
>
  
  
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="true"
      class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-home"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-home"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        
        首页 
        
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-app"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-app"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        
        应用 
        
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-chat"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-chat"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        
        聊天 
        
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-user"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-user"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        
        我的 
        
      </div>
    </div>
    <!--v-if-->
  </div>
  
  
</div>
`;

exports[`TabBar > TabBar customVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed t-tab-bar--safe t-tab-bar--normal wrapper"
  data-v-9a3dc706=""
  role="tablist"
>
  
  
  <div
    class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
    data-v-9a3dc706=""
  >
    <div
      aria-expanded="false"
      aria-selected="true"
      class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--normal"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-home"
          data-v-9a3dc706=""
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-home"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        <!---->
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
    data-v-9a3dc706=""
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--normal"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-app"
          data-v-9a3dc706=""
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-app"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        <!---->
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
    data-v-9a3dc706=""
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--normal"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-chat"
          data-v-9a3dc706=""
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-chat"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        <!---->
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
    data-v-9a3dc706=""
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--normal"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-user"
          data-v-9a3dc706=""
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-user"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        <!---->
      </div>
    </div>
    <!--v-if-->
  </div>
  
  
</div>
`;

exports[`TabBar > TabBar mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-da85bda4=""
>
  <h1
    class="title"
    data-v-da85bda4=""
  >
    TabBar 标签栏
  </h1>
  <p
    class="summary"
    data-v-da85bda4=""
  >
    用于在不同功能模块之间进行快速切换，位于页面底部。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-da85bda4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        纯文本标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed t-tab-bar--safe t-tab-bar--normal"
        data-v-da85bda4=""
        role="tablist"
      >
        
        
        <div
          class="t-tab-bar-item t-tab-bar-item--text-only t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="true"
            class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
            role="tab"
          >
            <!--v-if-->
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              首页
              
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--text-only t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <!--v-if-->
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              应用
              
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--text-only t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <!--v-if-->
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              聊天
              
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--text-only t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <!--v-if-->
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              我的
              
            </div>
          </div>
          <!--v-if-->
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-da85bda4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        图标加文字标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed t-tab-bar--safe t-tab-bar--normal"
        data-v-da85bda4=""
        role="tablist"
      >
        
        
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="true"
            class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-home"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-home"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              
              首页 
              
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-app"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-app"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              
              应用 
              
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-chat"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-chat"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              
              聊天 
              
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-user"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-user"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              
              我的 
              
            </div>
          </div>
          <!--v-if-->
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-da85bda4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        纯图标标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed t-tab-bar--safe t-tab-bar--normal"
        data-v-da85bda4=""
        role="tablist"
      >
        
        
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="true"
            class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-home"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-home"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              <!---->
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-app"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-app"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              <!---->
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-chat"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-chat"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              <!---->
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-user"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-user"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              <!---->
            </div>
          </div>
          <!--v-if-->
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-da85bda4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        双层级纯文本标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed t-tab-bar--safe t-tab-bar--normal"
        data-v-da85bda4=""
        role="tablist"
      >
        
        
        <div
          class="t-tab-bar-item t-tab-bar-item--text-only t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="true"
            class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
            role="tab"
          >
            <!--v-if-->
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              首页
              
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--text-only t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <!--v-if-->
            <div
              class="t-tab-bar-item__text"
            >
              <!--v-if-->
              
              应用
              
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--text-only t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="button"
          >
            <!--v-if-->
            <div
              class="t-tab-bar-item__text"
            >
              <svg
                class="t-icon t-icon-view-list t-tab-bar-item__icon-menu"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M2 4h20v2H2V4zm0 7h20v2H2v-2zm1 7H2v2h20v-2H3z"
                  fill="currentColor"
                />
              </svg>
              
              我的
              
            </div>
          </div>
          <!--v-if-->
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-da85bda4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        弱选中标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed t-tab-bar--safe t-tab-bar--normal"
        data-v-da85bda4=""
        role="tablist"
      >
        
        
        <div
          aria-label="首页，有16条消息"
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="true"
            class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--normal"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  
                  
                  <svg
                    class="t-icon t-icon-home"
                    style="font-size: 20px;"
                  >
                    <use
                      href="#t-icon-home"
                    />
                  </svg>
                  
                  
                </div>
                <div
                  class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                  style="right: 0px; top: 0px;"
                >
                  <!---->
                  16
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              
              首页 
              
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          aria-label="软件，有新的消息"
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--normal"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  
                  
                  <svg
                    class="t-icon t-icon-app"
                    style="font-size: 20px;"
                  >
                    <use
                      href="#t-icon-app"
                    />
                  </svg>
                  
                  
                </div>
                <div
                  class="t-badge--basic t-badge--dot t-badge--medium t-badge--circle t-has-count"
                  style="right: 0px; top: 0px;"
                >
                  <!---->
                  
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              
              软件 
              
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          aria-label="聊天，New"
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--normal"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  
                  
                  <svg
                    class="t-icon t-icon-chat"
                    style="font-size: 20px;"
                  >
                    <use
                      href="#t-icon-chat"
                    />
                  </svg>
                  
                  
                </div>
                <div
                  class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                  style="right: 0px; top: 0px;"
                >
                  <!---->
                  New
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              
              聊天 
              
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          aria-label="我的，有很多消息"
          class="t-tab-bar-item t-tab-bar-item--normal"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--normal"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  
                  
                  <svg
                    class="t-icon t-icon-user"
                    style="font-size: 20px;"
                  >
                    <use
                      href="#t-icon-user"
                    />
                  </svg>
                  
                  
                </div>
                <div
                  class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                  style="right: 0px; top: 0px;"
                >
                  <!---->
                  ···
                  <!---->
                </div>
                <!---->
              </div>
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              
              我的 
              
            </div>
          </div>
          <!--v-if-->
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-da85bda4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        悬浮胶囊标签栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed t-tab-bar--safe t-tab-bar--round"
        data-v-da85bda4=""
        role="tablist"
      >
        
        
        <div
          class="t-tab-bar-item t-tab-bar-item--round"
        >
          <div
            aria-expanded="false"
            aria-selected="true"
            class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-home"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-home"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              <!---->
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--round"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-app"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-app"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              <!---->
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--round"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-chat"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-chat"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              <!---->
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--round"
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--tag"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-user"
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-user"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              <!---->
            </div>
          </div>
          <!--v-if-->
        </div>
        
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-da85bda4=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 自定义
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        自定义样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed t-tab-bar--safe t-tab-bar--normal wrapper"
        data-v-9a3dc706=""
        data-v-da85bda4=""
        role="tablist"
      >
        
        
        <div
          class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
          data-v-9a3dc706=""
        >
          <div
            aria-expanded="false"
            aria-selected="true"
            class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--normal"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-home"
                data-v-9a3dc706=""
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-home"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              <!---->
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
          data-v-9a3dc706=""
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--normal"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-app"
                data-v-9a3dc706=""
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-app"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              <!---->
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
          data-v-9a3dc706=""
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--normal"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-chat"
                data-v-9a3dc706=""
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-chat"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              <!---->
            </div>
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-tab-bar-item t-tab-bar-item--split t-tab-bar-item--normal"
          data-v-9a3dc706=""
        >
          <div
            aria-expanded="false"
            aria-selected="false"
            class="t-tab-bar-item__content t-tab-bar-item__content--normal"
            role="tab"
          >
            <div
              class="t-tab-bar-item__icon"
              style="height: 20px;"
            >
              
              <svg
                class="t-icon t-icon-user"
                data-v-9a3dc706=""
                style="font-size: 20px;"
              >
                <use
                  href="#t-icon-user"
                />
              </svg>
              
            </div>
            <div
              class="t-tab-bar-item__text t-tab-bar-item__text--small"
            >
              <!--v-if-->
              <!---->
            </div>
          </div>
          <!--v-if-->
        </div>
        
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`TabBar > TabBar pureIconVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed t-tab-bar--safe t-tab-bar--normal"
  role="tablist"
>
  
  
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="true"
      class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-home"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-home"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        <!---->
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-app"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-app"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        <!---->
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-chat"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-chat"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        <!---->
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-user"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-user"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        <!---->
      </div>
    </div>
    <!--v-if-->
  </div>
  
  
</div>
`;

exports[`TabBar > TabBar roundVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed t-tab-bar--safe t-tab-bar--round"
  role="tablist"
>
  
  
  <div
    class="t-tab-bar-item t-tab-bar-item--round"
  >
    <div
      aria-expanded="false"
      aria-selected="true"
      class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-home"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-home"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        <!---->
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--round"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-app"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-app"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        <!---->
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--round"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-chat"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-chat"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        <!---->
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--round"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <div
        class="t-tab-bar-item__icon"
        style="height: 20px;"
      >
        
        <svg
          class="t-icon t-icon-user"
          style="font-size: 20px;"
        >
          <use
            href="#t-icon-user"
          />
        </svg>
        
      </div>
      <div
        class="t-tab-bar-item__text t-tab-bar-item__text--small"
      >
        <!--v-if-->
        <!---->
      </div>
    </div>
    <!--v-if-->
  </div>
  
  
</div>
`;

exports[`TabBar > TabBar textSpreadVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed t-tab-bar--safe t-tab-bar--normal"
  role="tablist"
>
  
  
  <div
    class="t-tab-bar-item t-tab-bar-item--text-only t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="true"
      class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
      role="tab"
    >
      <!--v-if-->
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        首页
        
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--text-only t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <!--v-if-->
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        应用
        
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--text-only t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="button"
    >
      <!--v-if-->
      <div
        class="t-tab-bar-item__text"
      >
        <svg
          class="t-icon t-icon-view-list t-tab-bar-item__icon-menu"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2 4h20v2H2V4zm0 7h20v2H2v-2zm1 7H2v2h20v-2H3z"
            fill="currentColor"
          />
        </svg>
        
        我的
        
      </div>
    </div>
    <!--v-if-->
  </div>
  
  
</div>
`;

exports[`TabBar > TabBar textVue demo works fine 1`] = `
<div
  class="t-tab-bar t-tab-bar--bordered t-tab-bar--fixed t-tab-bar--safe t-tab-bar--normal"
  role="tablist"
>
  
  
  <div
    class="t-tab-bar-item t-tab-bar-item--text-only t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="true"
      class="t-tab-bar-item__content t-tab-bar-item__content--checked t-tab-bar-item__content--tag"
      role="tab"
    >
      <!--v-if-->
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        首页
        
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--text-only t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <!--v-if-->
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        应用
        
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--text-only t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <!--v-if-->
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        聊天
        
      </div>
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-tab-bar-item t-tab-bar-item--text-only t-tab-bar-item--normal"
  >
    <div
      aria-expanded="false"
      aria-selected="false"
      class="t-tab-bar-item__content t-tab-bar-item__content--tag"
      role="tab"
    >
      <!--v-if-->
      <div
        class="t-tab-bar-item__text"
      >
        <!--v-if-->
        
        我的
        
      </div>
    </div>
    <!--v-if-->
  </div>
  
  
</div>
`;
